--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "chart.js": "^4.4.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "sweetalert2": "^11.10.6",
+    "yup": "^1.4.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
