--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
