--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
     "sweetalert2": "^11.10.6",
     "yup": "^1.4.0",
     "zustand": "^4.5.1"
