--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
