--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@turf/turf": "^7.1.0",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.11.0",
     "fuse.js": "^7.0.0",
+    "leaflet": "^1.9.4",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -31,6 +33,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
