--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
-    "framer-motion": "^11.11.0",
     "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
+    "motion": "^12.10.0",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
